# osrm-tutorial

./: .gitignore  CMakeLists.txt  README.md  download-run.sh  install-deps.sh  install-osrm.sh  install.sh  locations.csv  more-locations.csv  osrm-expert.ipynb  osrm-location-graph.ipynb  osrm-request.sh  osrm-tutorial.ipynb
south-sudan/: ssudan-locations.csv  ssudan_add_manual_routes.html  ssudan_amenities_data_sequential.csv  ssudan_amenities_data_triangle.csv  ssudan_amenities_data_visit_tracking.csv  ssudan_location_graph_direct_distance.html  ssudan_location_graph_sequential.html  ssudan_location_graph_triangle.html  ssudan_location_graph_visit_tracking.html  ssudan_sequential_routes.csv  ssudan_triangle_routes.csv  ssudan_visit_tracking_routes.csv
